--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -2,8 +2,8 @@
 Release version 17.09 (September, 2017)
 
 11/3/17
-Release version 17.11 (Novermber, 2017)
-Small changes to documentation and code commments.
+Release version 17.11 (November, 2017)
+Small changes to documentation and code comments.
 Added a test problem with an input tracer being forced into the domain with an inflow jet.
 
 12/1/17 
@@ -71,7 +71,7 @@ Minor compiler settings fixes
 6/3/19
 Bug fix in filling u_mac ghost cells
 Fix create_umac_grown for periodic cases
-Misc code cleanup; extra arguments, extraenous calls, compiler quieting
+Misc code cleanup; extra arguments, extraneous calls, compiler quieting
 Parallel reduction cleanup
 Various changes to be consistent with AMReX interfaces
 
@@ -156,7 +156,7 @@ Minor tiling fixes
 
 12/2/20
 Creation from Embiggen of a tool to extrapolate coarse checkpoint file to a finest mesh
-Add a "stop_interval" parameter to allow the simulation to stop at a specfic additional time interval after the physical time of a restart checkpoint file
+Add a "stop_interval" parameter to allow the simulation to stop at a specific additional time interval after the physical time of a restart checkpoint file
 Remove Dpdt_Type and code related to Pressure temporal-centeredness at a Point (vs. Interval)
 Test case updates
 
@@ -176,7 +176,7 @@ Many small updates to several parts of the code, including:
 4/1/21
 Cleanup unused options, problems, and inputs files
 Fixes to ref_ratio=4 ghost cell bugs
-Port some initializtion kernels to C++
+Port some initialization kernels to C++
 Port some derived functions to C++
 Port boundary filling functions to C++
 Ghost cell filling bugs
@@ -214,7 +214,7 @@ Various EB and advection updates and fixes
 
 9/1/21
 Diffusion changes - use new multicomponent MLMG solver
-In the temperature solve, let ns.temp_cond_coef represent (lamba/c_p)
+In the temperature solve, let ns.temp_cond_coef represent (lambda/c_p)
 Hydrodynamic algorithm updates
 Updates to create_umac_grown
 Embedded boundary compile updates
@@ -225,7 +225,7 @@ Moved slope routines to AMReX-Hydro
 Documentation reorganization
 Misc. AMR fixes
 Misc. cleanup (re-org, quiet compiler warnings, remove unused code)
-Misc. compiler fixes and general updates to test and bechmark problems
+Misc. compiler fixes and general updates to test and benchmark problems
 
 11/2/21
 Various GPU fixes
