Revise the paper

--- a/JOSS_paper/paper.bib
+++ b/JOSS_paper/paper.bib
@@ -1,59 +1,53 @@
-@article{Pearson:2017,
-  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
-  	Archiveprefix = {arXiv},
-  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
-  	Eprint = {1703.04627},
-  	Journal = {ArXiv e-prints},
-  	Keywords = {Astrophysics - Astrophysics of Galaxies},
-  	Month = mar,
-  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
-  	Year = 2017
-}
-
-@book{Binney:2008,
-  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
-  	Author = {{Binney}, J. and {Tremaine}, S.},
-  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
-  	Publisher = {Princeton University Press},
-  	Title = {{Galactic Dynamics: Second Edition}},
-  	Year = 2008
-}
-
-@article{gaia,
-    author = {{Gaia Collaboration}},
-    title = "{The Gaia mission}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1609.04153},
-    primaryClass = "astro-ph.IM",
-    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
-    year = 2016,
-    month = nov,
-    volume = 595,
-    doi = {10.1051/0004-6361/201629272},
-    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
-}
-
-@article{astropy,
-    author = {{Astropy Collaboration}},
-    title = "{Astropy: A community Python package for astronomy}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1307.6212},
-    primaryClass = "astro-ph.IM",
-    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
-    year = 2013,
+@ARTICLE{pyroI,
+   author = {{Zingale}, M.},
+    title = "{pyro: A teaching code for computational astrophysical hydrodynamics}",
+  journal = {Astronomy and Computing},
+archivePrefix = "arXiv",
+   eprint = {1306.6883},
+ primaryClass = "astro-ph.IM",
+ keywords = {Hydrodynamics, Methods: numerical},
+     year = 2014,
     month = oct,
-    volume = 558,
-    doi = {10.1051/0004-6361/201322068},
-    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
+   volume = 6,
+    pages = {52-62},
+      doi = {10.1016/j.ascom.2014.07.003},
+   adsurl = {http://adsabs.harvard.edu/abs/2014A%26C.....6...52Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@misc{fidgit,
-  author = {A. M. Smith and K. Thaney and M. Hahnel},
-  title = {Fidgit: An ungodly union of GitHub and Figshare},
-  year = {2020},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  url = {https://github.com/arfon/fidgit}
+@ARTICLE{castro,
+   author = {{Almgren}, A.~S. and {Beckner}, V.~E. and {Bell}, J.~B. and
+	{Day}, M.~S. and {Howell}, L.~H. and {Joggerst}, C.~C. and {Lijewski}, M.~J. and
+	{Nonaka}, A. and {Singer}, M. and {Zingale}, M.},
+    title = "{CASTRO: A New Compressible Astrophysical Solver. I. Hydrodynamics and Self-gravity}",
+  journal = {Astrophysical Journal},
+archivePrefix = "arXiv",
+   eprint = {1005.0114},
+ primaryClass = "astro-ph.IM",
+ keywords = {equation of state, gravitation, hydrodynamics, methods: numerical, nuclear reactions, nucleosynthesis, abundances},
+     year = 2010,
+    month = jun,
+   volume = 715,
+    pages = {1221-1238},
+      doi = {10.1088/0004-637X/715/2/1221},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...715.1221A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{maestro,
+   author = {{Nonaka}, A. and {Almgren}, A.~S. and {Bell}, J.~B. and {Lijewski}, M.~J. and
+	{Malone}, C.~M. and {Zingale}, M.},
+    title = "{MAESTRO: An Adaptive Low Mach Number Hydrodynamics Algorithm for Stellar Flows}",
+  journal = {Astrophysical Journal Supplement},
+archivePrefix = "arXiv",
+   eprint = {1005.0112},
+ primaryClass = "astro-ph.IM",
+ keywords = {convection, hydrodynamics, methods: numerical, nuclear reactions, nucleosynthesis, abundances, supernovae: general, white dwarfs},
+     year = 2010,
+    month = jun,
+   volume = 188,
+    pages = {358-383},
+      doi = {10.1088/0067-0049/188/2/358},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJS..188..358N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
