update the JOSS paper

--- a/JOSS_paper/paper.bib
+++ b/JOSS_paper/paper.bib
@@ -1,53 +1,57 @@
-@ARTICLE{pyroI,
-   author = {{Zingale}, M.},
-    title = "{pyro: A teaching code for computational astrophysical hydrodynamics}",
-  journal = {Astronomy and Computing},
-archivePrefix = "arXiv",
-   eprint = {1306.6883},
- primaryClass = "astro-ph.IM",
- keywords = {Hydrodynamics, Methods: numerical},
-     year = 2014,
-    month = oct,
-   volume = 6,
-    pages = {52-62},
-      doi = {10.1016/j.ascom.2014.07.003},
-   adsurl = {http://adsabs.harvard.edu/abs/2014A%26C.....6...52Z},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@ARTICLE{almgren1998conservative,
+	title={{A conservative adaptive projection method for the variable density incompressible Navier--Stokes equations}},
+	author={Almgren, Ann S and Bell, John B and Colella, Phillip and Howell, Louis H and Welcome, Michael L},
+	journal={Journal of Computational Physics},
+	volume={142},
+	number={1},
+	pages={1--46},
+	year={1998},
+	publisher={Elsevier}
 }
 
-@ARTICLE{castro,
-   author = {{Almgren}, A.~S. and {Beckner}, V.~E. and {Bell}, J.~B. and
-	{Day}, M.~S. and {Howell}, L.~H. and {Joggerst}, C.~C. and {Lijewski}, M.~J. and
-	{Nonaka}, A. and {Singer}, M. and {Zingale}, M.},
-    title = "{CASTRO: A New Compressible Astrophysical Solver. I. Hydrodynamics and Self-gravity}",
-  journal = {Astrophysical Journal},
-archivePrefix = "arXiv",
-   eprint = {1005.0114},
- primaryClass = "astro-ph.IM",
- keywords = {equation of state, gravitation, hydrodynamics, methods: numerical, nuclear reactions, nucleosynthesis, abundances},
-     year = 2010,
-    month = jun,
-   volume = 715,
-    pages = {1221-1238},
-      doi = {10.1088/0004-637X/715/2/1221},
-   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...715.1221A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@ARTICLE{zeng2022parallel,
+  title={{A parallel cell-centered adaptive level set framework for efficient simulation of two-phase flows with subcycling and non-subcycling}},
+  author={Zeng, Yadong and Xuan, Anqing and Blaschke, Johannes and Shen, Lian},
+  journal={Journal of Computational Physics},
+  volume={448},
+  pages={110740},
+  year={2022},
+  publisher={Elsevier}
 }
 
-@ARTICLE{maestro,
-   author = {{Nonaka}, A. and {Almgren}, A.~S. and {Bell}, J.~B. and {Lijewski}, M.~J. and
-	{Malone}, C.~M. and {Zingale}, M.},
-    title = "{MAESTRO: An Adaptive Low Mach Number Hydrodynamics Algorithm for Stellar Flows}",
-  journal = {Astrophysical Journal Supplement},
-archivePrefix = "arXiv",
-   eprint = {1005.0112},
- primaryClass = "astro-ph.IM",
- keywords = {convection, hydrodynamics, methods: numerical, nuclear reactions, nucleosynthesis, abundances, supernovae: general, white dwarfs},
-     year = 2010,
-    month = jun,
-   volume = 188,
-    pages = {358-383},
-      doi = {10.1088/0067-0049/188/2/358},
-   adsurl = {http://adsabs.harvard.edu/abs/2010ApJS..188..358N},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@ARTICLE{zeng2023consistent,
+  title={{A consistent adaptive level set framework for incompressible two-phase flows with high density ratios and high Reynolds numbers}},
+  author={Zeng, Yadong and Liu, Han and Gao, Qiang and Almgren, Ann and Bhalla, Amneet Pal Singh and Shen, Lian},
+  journal={Journal of Computational Physics},
+  volume={478},
+  pages={111971},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@ARTICLE{li2024open,
+  title={{An open-source, adaptive solver for particle-resolved simulations with both subcycling and non-subcycling methods}},
+  author={Li, Xuzhu and Li, Chun and Li, Xiaokai and Li, Wenzhuo and Tang, Mingze and Zeng, Yadong and Zhu, Zhengping},
+  journal={Physics of Fluids},
+  volume={36},
+  number={11},
+  year={2024},
+  publisher={AIP Publishing}
+}
+
+@ARTICLE{zhang2019amrex,
+	title={{AMReX: a framework for block-structured adaptive mesh refinement}},
+	author={Zhang, Weiqun and Almgren, Ann and Beckner, Vince and Bell, John and Blaschke, Johannes and Chan, Cy and Day, Marcus and Friesen, Brian and Gott, Kevin and Graves, Daniel and others},
+	journal={Journal of Open Source Software},
+	volume={4},
+	number={37},
+	year={2019},
+	publisher={Lawrence Berkeley National Lab.(LBNL), Berkeley, CA (United States)}
+}
+
+@ARTICLE{liu2024investigate,
+  title={{Investigate the efficiency of incompressible flow simulations on CPUs and GPUs with BSAMR}},
+  author={Liu, Dewen and He, Shuai and Cheng, Haoran and Zeng, Yadong},
+  journal={arXiv preprint arXiv:2405.07148},
+  year={2024}
 }
